# Rustris

./: .markdownlint.yml  Cargo.toml  README.md
src/: main.rs
src/libs/: mod.rs
src/libs/input_management/: read_input.rs
src/libs/print_management/: ascii.rs  mod.rs  resolution.rs
src/libs/scene/: fix_resolution_scene.rs  game_scene.rs  mod.rs  wellcome_scene.rs
src/libs/scene/fix_resolution/: fix_resolution_scene.rs  mod.rs  renderer.rs
src/libs/scene/game/: controller.rs  game_scene.rs  mod.rs  renderer.rs  tetromino.rs
src/libs/scene/game_over/: game_over_scene.rs  mod.rs
src/libs/scene/wellcome/: mod.rs  renderer.rs  wellcome_scene.rs
src/libs/state/: state.rs
src/libs/utils/: terminal.rs
